Fixed halftime NBA games not showing proper UI

--- a/src/components/ui/GameCard/GameCard.css
+++ b/src/components/ui/GameCard/GameCard.css
@@ -11,6 +11,7 @@
     justify-content: space-between;
     gap: 20px;
     width: var(--game-card-width);
+    height: var(--game-card-height);
 }
 
 .inner-game-card {
@@ -98,13 +99,13 @@
 }
 @media (max-width: 800px) {
     :root {
-        --game-card-width: 200px;
+        --game-card-width: 260px;
     }
 }
 
 @media (max-width: 700px) {
     :root {
-        --game-card-width: 180px;
+        --game-card-width: 240px;
     }
     .logos img {
         width: 60px;
@@ -112,20 +113,15 @@
     }
 }
 @media (max-width: 650px) {
-    .game-card-badges {
-        flex-direction: column;
-        gap: 10px;
-        align-items: flex-start;
-    }
+
 }
 @media (max-width: 600px) {
     :root {
-        --game-card-width: 160px;
+        --game-card-width: 220px;
     }
 
     .logos img {
         width: 50px;
         height: 50px;
-        object-fit: contain;
     }
 }
