--- a/src/index.css
+++ b/src/index.css
@@ -74,7 +74,8 @@ html, body {
   /* card */
   --media-card-width: 200px;
   --media-card-height: 300px;
-  --game-card-width: 220px;
+  --game-card-width: 280px;
+  --game-card-height: 300px;
 
   --max-container-width: 1400px;
   --border-radius: 10px;
